--- a/Skins/Fluid/Stylesheets/Mobile.css
+++ b/Skins/Fluid/Stylesheets/Mobile.css
@@ -11,10 +11,9 @@
 
 	.title-bar-layout a.logo
 	{
-		width: 229px;
-		height: 55px;
-		background: transparent url('Images/PlaceholderLogo-white_1.png') no-repeat center center;
-		-pie-background: transparent url('Skins/Fluid/Stylesheets/Images/PlaceholderLogo-white_1.png') no-repeat center center;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background: none;
 	}
 
 	.search-bar .search-submit
@@ -415,12 +414,12 @@
 
 	.title-bar-layout .logo-wrapper
 	{
-		min-height: 55px;
+		min-height: 40px;
 	}
 
 	.menu-icon-container
 	{
-		min-height: 55px;
+		min-height: 40px;
 	}
 
 	.off-canvas-wrapper-inner .main-section > .outer-row
