--- a/Skins/Fluid/Stylesheets/Print.css
+++ b/Skins/Fluid/Stylesheets/Print.css
@@ -414,8 +414,9 @@
 
 	.title-bar-layout a.logo
 	{
-		background: transparent url('Images/PlaceholderLogo-white_1.png') no-repeat center center;
-		-pie-background: transparent url('Skins/Fluid/Stylesheets/Images/PlaceholderLogo-white_1.png') no-repeat center center;
+		background-repeat: no-repeat;
+		background: none;
+		background-position: center center;
 	}
 
 	.main-section > .outer-row
