--- a/Skins/Fluid/Stylesheets/Tablet.css
+++ b/Skins/Fluid/Stylesheets/Tablet.css
@@ -83,12 +83,11 @@
 
 	.title-bar-layout a.logo
 	{
+		background-position: center center;
 		top: 0;
 		margin: 0;
-		width: 229px;
-		height: 55px;
-		background: transparent url('Images/PlaceholderLogo-white_1.png') no-repeat center center;
-		-pie-background: transparent url('Skins/Fluid/Stylesheets/Images/PlaceholderLogo-white_1.png') no-repeat center center;
+		background-repeat: no-repeat;
+		background: none;
 	}
 
 	.title-bar .menu-icon span
@@ -444,13 +443,13 @@
 
 	.title-bar-layout .logo-wrapper
 	{
-		min-height: 55px;
+		min-height: 40px;
 		flex-basis: 100%;
 	}
 
 	.menu-icon-container
 	{
-		min-height: 55px;
+		min-height: 40px;
 	}
 
 	.off-canvas-wrapper-inner .outer-row
