--- a/Resources/Stylesheets/MainStyles.css
+++ b/Resources/Stylesheets/MainStyles.css
@@ -201,6 +201,7 @@ th.alternating_raws
 	h2
 	{
 		color: #06704b;
+		mc-hyphenate: never;
 	}
 
 	div.Example
@@ -220,9 +221,11 @@ th.alternating_raws
 	{
 		border-color: #0d5f2c;
 		border: solid 2px #0d5f2c;
-		border-left-length: 3px;
 		padding: 10 px 10 px 10 px 90 px;
 		margin: 20 px 10 px 20 px 0 px;
+		border-left-length: 0px;
+		padding-left: 90;
+		padding-right: 10;
 	}
 
 	div.Name
@@ -260,6 +263,31 @@ th.alternating_raws
 	h6
 	{
 		mc-heading-level: 0;
+	}
+
+	p:first-child
+	{
+		mc-hyphenate: never;
+	}
+
+	p
+	{
+		mc-hyphenate-shortest-word: 13;
+	}
+
+	div
+	{
+		mc-hyphenate: never;
+	}
+
+	th
+	{
+		
+	}
+
+	ul
+	{
+		
 	}
 }
 
@@ -383,5 +411,10 @@ div.Snippet
 div.Disclaimer
 {
 	border: solid 0px transparent;
+}
+
+span.mc-variable.General\00002ELinkedIn
+{
+	
 }
 
