--- a/Resources/Stylesheets/MainStyles.css
+++ b/Resources/Stylesheets/MainStyles.css
@@ -289,6 +289,11 @@ th.alternating_raws
 	{
 		
 	}
+
+	MadCap|glossaryProxy
+	{
+		
+	}
 }
 
 p.Summary
@@ -416,5 +421,13 @@ div.Disclaimer
 span.mc-variable.General\00002ELinkedIn
 {
 	
+}
+
+p.printonlyheading
+{
+	margin-bottom: 8px;
+	margin-top: 8px;
+	font-size: 14pt;
+	color: #1d59a9;
 }
 
