--- a/Resources/Stylesheets/StylesForHomePage.css
+++ b/Resources/Stylesheets/StylesForHomePage.css
@@ -110,10 +110,11 @@ div.topic-hero	/*This is the Hero/Banner on the Home Page - To replace the banne
 	padding-bottom: 150px;
 	padding-top: 150px;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-	background-image: url('../Images/jobs colour.jpg');
 	background-position: center top;
-	background-size: contain;
 	height: 700px;
+	background-size: contain;
+	background-image: url('../Images/workers.jpg');
+	border: solid 1px #a9a9a9;
 }
 
 /*==Home Tiles section==*/
